edit docs and add README.md
